--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@graphql-codegen/typescript": "^1.12.2",
     "@graphql-codegen/typescript-operations": "^1.12.2",
     "@graphql-codegen/typescript-react-apollo": "^1.12.2",
-    "@graphql-codegen/typescript-resolvers": "^1.12.2"
+    "@graphql-codegen/typescript-resolvers": "^1.12.2",
+    "@types/styled-components": "^5.0.1"
+  },
+  "dependencies": {
+    "apollo-boost": "^0.4.7",
+    "styled-components": "^5.0.1"
   }
 }
